@@ -4,6 +4,8 @@
 	<td align="right">{TOTAL_PERCENT}%
 	<td align="right">{MINER_HASHRATE}
 	<td align="right">{AVG_BLOCK_SIZE}
+	<td align="right"><!--TOTAL_FEES-->
+	<td align="right"><!--FEE_PER_BYTE-->
 	<td align="right">
 <script>
 	inerton({MINER_ID})
